<resources>
    <string name="app_name">Prog2</string>
    <string name="simple_calculator">Simple Calculator</string>
    <string name="enter_number_1">Enter number-1</string>
    <string name="enter_number_2">Enter number-2</string>
    <string name="_0">0</string>
    <string name="add">ADD</string>
    <string name="sub">sub</string>
    <string name="mul">Mul</string>
    <string name="div">Div</string>
</resources>